--- a/plugins/nf-cws/build.gradle
+++ b/plugins/nf-cws/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     testImplementation ('org.spockframework:spock-junit4:2.3-groovy-4.0') { exclude group: 'org.apache.groovy'; exclude group: 'net.bytebuddy' }
     testImplementation ('com.google.jimfs:jimfs:1.1')
 
+    testImplementation(testFixtures("io.nextflow:nextflow:$nextflowVersion"))
+
     // see https://docs.gradle.org/4.1/userguide/dependency_management.html#sec:module_replacement
     modules {
         module("commons-logging:commons-logging") { replacedBy("org.slf4j:jcl-over-slf4j") }
