--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,9 +35,7 @@ jobs:
           sudo apt-get install -y clang lld gcc-aarch64-linux-gnu libc6-dev-arm64-cross
 
       - name: Compile using make
-        run: |
-          make c_scripts
-          ls -la plugins/nf-cws/src/resources/nf-cws
+        run: make c_scripts
 
       - name: Setup Java ${{ matrix.java_version }}
         uses: actions/setup-java@v3
